test_suite/alan-2022-examples/failing/004080_mutation.alan
source w7 begin leave(1 "" end
